--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
   <header>
     <h1>Akash Kumar</h1>
-    <p class="tagline">"Driven by curiosity, powered by purpose."</p>
+    <p class="tagline">"Innovating with code, learning with passion."</p>
   </header>
 
   <section class="section" id="about">
     <h2>About Me</h2>
     <p>
-      Tech enthusiast and college student diving into AI and programming.
-      Big fan of solving real problems with smart solutions. Always curious and up for a challenge.
+     I'm Akash Kumar, a passionate and curious tech enthusiast with a deep interest in AI, machine learning, and full-stack development. As a dedicated college student, I enjoy exploring real-world problems and building innovative, scalable solutions using modern technologies. Whether it's through collaborative projects, certifications, or independent learning, I strive to grow continuously and make meaningful contributions to the tech world.
     </p>
   </section>
 
