--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <h2>Contact</h2>
     <p>Let’s connect:</p>
     <ul>
-      <li><a href="mailto:ak.kumar.dev@gmail.com">Email: ak.kumar.dev@gmail.com</a></li>
+      <li><a href="mailto:akashraj6763@gmail.com">Email: akashraj6763@gmail.com</a></li>
       <li><a href="https://github.com/Akash-Kumar99" target="_blank">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/akash-kumar-dev" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/akash-kumar-652419317/" target="_blank">LinkedIn</a></li>
     </ul>
   </section>
 
